Mar 9, 2007

  * FIXED: reset some more fields in rdf_reset_db, avoiding continuous
    re-hash after rdf_reset_db/0.

  * FIXED: rdf_persistency to clear file repository on rdf_reset_db.

Mar 8, 2007

  * FIXED: locking issue in rdf_reachable/3 and maintaining active-query
    count.  Thanks to Jacco van Ossenbruggen and Michiel Hildebrand for
    a reproducable case.

Mar 6, 2007

  * ADDED: application/rdf+xml to rdf_http_plugin.pl.  Yves Raimond.

Mar 5, 2007

  * ADDED: rdf_load/2, allow for base_uri(-URI) to get access to the named
    graph a source is loaded into.  Jacco van Ossenbruggen.

Jan 28, 2007

  * FIXED: rdf_meta declaration for rdf_update/5.  Michiel Hildebrand.

Jan 26, 2007

  * FIXED: Atom-referencing problem in literal index-map.

  * FIXED: Various URL/File issues in rdf_db.pl and rdf_edit.pl.  Fixed
    Triple20 modification issues.  Anjo Anjewierden.

Jan 18, 2007

  * ADDED: loading of rdf embedded in xhtml.  Yves Raimond.

Jan 16, 2007

  * FIXED: Various issues related to persistency handling after introduction
    of new load plugin structure.

  * MODIFIED: Source info as created by rdf_load/2 is now always a URI.

Jan 15, 2007

  * FIXED: cache writing using global dir.

Jan 2, 2007

  * FIXED: Bug#248: bit-matrix handling.  Keri Harris.

Dec 20, 2006

  * ENHANCED: slightly better messages from rdf_turtle.pl

Dec 8, 2006

  * ENHANCED: rdf_load/2 to load plugins dealing with different formats,
    compression and sources such as HTTP.

  * ADDED: rdf_turtle.pl to load Turtle files.

Nov 24, 2006

  * FIXED: subPropertyOf issue.  Michiel Hildebrand.

Nov 9, 2006

  * FIXED: subPropertyOf issues.  Not fully checked yet.

Oct 25, 2006

  * FIXED: Memory leak in rdf_complexity and rdf_reachable using literal
    object.

Oct 24, 2006

  * FIXED: Changed subject was broadcasted as object after rdf_update/4.

  * FIXED: Bug in duplicate administration when using language or type